# curse_client

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
src/: lib.rs
src/endpoints/: categories.rs  files.rs  fingerprints.rs  games.rs  minecraft.rs  mod.rs  mods.rs
src/models/: categories.rs  enums.rs  files.rs  fingerprints.rs  games.rs  minecraft.rs  mod.rs  mods.rs  pagination.rs
tests/: games_endpoints_test.rs  integration_test.rs  test.json
